[project]
name = "uc-rollout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "furo>=2025.12.19",
    "graphviz>=0.21",
    "pillow>=12.2.0",
    "sphinx==8.3.0",
    "sphinx-needs==6.3.0",
    "sphinxcontrib-plantuml>=0.31",
]
